@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ApplianceTest extends AbstractBasicProviderTest<BaseFaker> {
@@ -16,6 +16,6 @@ class ApplianceTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.appliance().equipment(), "appliance.equipment"));
+        return List.of(TestSpec.of(() -> faker.appliance().equipment(), "appliance.equipment"));
     }
 }
