@@ -5,7 +5,7 @@ import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class CountryTest extends AbstractBasicProviderTest<BaseFaker> {
@@ -43,6 +43,6 @@ class CountryTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.country().name(), "country.name"));
+        return List.of(TestSpec.of(() -> faker.country().name(), "country.name"));
     }
 }
