@@ -1,12 +1,12 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class CryptoCoinTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.cryptoCoin().coin(), "crypto_coin.coin"));
+        return List.of(TestSpec.of(() -> faker.cryptoCoin().coin(), "crypto_coin.coin"));
     }
 }
