@@ -5,7 +5,7 @@ import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 import java.util.List;
 import java.util.Random;
@@ -17,7 +17,7 @@ class LoremTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.lorem().word(), "lorem.words"));
+        return List.of(TestSpec.of(() -> faker.lorem().word(), "lorem.words"));
     }
 
     @Test
