@@ -4,14 +4,14 @@ import org.junit.jupiter.api.RepeatedTest;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ScienceTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.science().unit(), "science.unit"));
+        return List.of(TestSpec.of(() -> faker.science().unit(), "science.unit"));
     }
     @RepeatedTest(10)
     void element() {
