@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 /**
@@ -10,6 +10,6 @@ class YodaTest extends AbstractBasicProviderTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(() -> faker.yoda().quote(), "yoda.quotes"));
+        return List.of(TestSpec.of(() -> faker.yoda().quote(), "yoda.quotes"));
     }
 }
