@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class DragonBallTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class DragonBallTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(dragonBall::character, "dragon_ball.characters")
         );
     }
