@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class FuturamaTest extends EntertainmentFakerTest {
@@ -8,7 +8,7 @@ class FuturamaTest extends EntertainmentFakerTest {
     private final Futurama futurama = getFaker().futurama();
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(futurama::character, "futurama.characters"),
             TestSpec.of(futurama::location, "futurama.locations"),
             TestSpec.of(futurama::hermesCatchPhrase, "futurama.hermes_catchphrases"),
