@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class GratefulDeadTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class GratefulDeadTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(gratefulDead::players, "grateful_dead.players"),
             TestSpec.of(gratefulDead::songs, "grateful_dead.songs")
         );
