@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class HowToTrainYourDragonTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class HowToTrainYourDragonTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(howToTrainYourDragon::characters, "how_to_train_your_dragon.characters"),
             TestSpec.of(howToTrainYourDragon::dragons, "how_to_train_your_dragon.dragons"),
             TestSpec.of(howToTrainYourDragon::locations, "how_to_train_your_dragon.locations")
