@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SuitsTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class SuitsTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(suits::characters, "suits.characters"),
             TestSpec.of(suits::quotes, "suits.quotes")
         );
