@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class TheExpanseTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class TheExpanseTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(theExpanse::characters, "the_expanse.characters"),
             TestSpec.of(theExpanse::locations, "the_expanse.locations"),
             TestSpec.of(theExpanse::quotes, "the_expanse.quotes"),
