@@ -3,7 +3,7 @@ package net.datafaker.providers.foods;
 import net.datafaker.providers.food.Food;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -19,7 +19,7 @@ class FoodTest extends FoodFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(food::dish, "food.dish"),
             TestSpec.of(food::fruit, "food.fruits"),
             TestSpec.of(food::ingredient, "food.ingredients"),
