@@ -1,6 +1,6 @@
 package net.datafaker.providers.videogame;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SonicTheHedgehogTest extends VideoGameFakerTest {
@@ -9,7 +9,7 @@ class SonicTheHedgehogTest extends VideoGameFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(sonicTheHedgehog::character, "games.sonic_the_hedgehog.character"),
             TestSpec.of(sonicTheHedgehog::game, "games.sonic_the_hedgehog.game"),
             TestSpec.of(sonicTheHedgehog::zone, "games.sonic_the_hedgehog.zone")
